# data-filter-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py
.github/workflows/: ci.yml  release.yml
data_filter_mcp/: __init__.py  models.py  registry.py  server.py  validator.py
data_filter_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data_filter_mcp/loaders/: __init__.py  base.py  factory.py  json_loader.py  txt_loader.py  yaml_loader.py
tests/: test_loaders.py  test_mcp_tools.py  test_registry.py  test_server_flow.py  test_validator.py
